5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1795_1594.log
== TEST (2019-05-30 16:12:27) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	danos = danos * danos[i]*p
	i = i + 1
	p = p + 1
print( danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:20) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	final = final * danos[i]*p
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:51) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[i]*p)
	final = final * danos
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:24) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[i]*p)
	#final = final * danos
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:39) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[i]*p)
	#final = final * danos
	i = i + 1
	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:19) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[i]*p)
	danos = danos + 1
	final = danos[i]+danos
	#final = final * danos
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:48) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = danos[i] #acumuladora de danos

while(i < size(danos)):
	danos = acum*p
	danos = danos + 1
	final = acum + danos
	#final = final * danos
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:11) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = danos[i] #acumuladora de danos

while(i < size(danos)):
	danos = acum*p
	danos = danos + 1
	final = acum * danos
	#final = final * danos
	i = i + 1
	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:17) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = danos[0] #acumuladora de danos

#while(i < size(danos)):
#	danos = acum*p
#	danos = danos + 1
#	final = acum * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:33) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

#while(i < size(danos)):
	danos = danos[acum]*1
	prox = danos[acum]*danos
	final = prox + 1
	p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(final)
-- ERROR:
File "XXXX", line 8
    danos = danos[acum]*1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:52) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

#while(i < size(danos)):
	danos = (danos[acum])*1
	prox = (danos[acum])*danos
	final = prox + 1
	p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(final)
-- ERROR:
File "XXXX", line 8
    danos = (danos[acum])*1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:13) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*1
	prox = (danos[acum])*danos
	final = prox + 1
	p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:21) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*1
	#prox = (danos[acum])*danos
	#final = prox + 1
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:47) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*1
	prox = (danos[acum])*danos
	#final = prox + 1
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:50) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos
s = 1
while(i < size(danos)):
	danos = (danos[acum])*1
	prox = danos[s]*danos
	#final = prox + 1
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(prox)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:32) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos
s = 1
while(i < size(danos)):
	danos = (danos[acum])*1
	prox = danos[s]+1
	
	final = prox * danos
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(prox)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:54) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos
s = 1
while(i < size(danos)):
	danos = (danos[acum])*p
	prox = danos[s]+ 
	
	final = prox * danos
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(prox)
-- ERROR:
File "XXXX", line 9
    prox = danos[s]+ 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:13) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos
s = 1
while(i < size(danos)):
	danos = (danos[acum])*p
	if()
	
	final = prox * danos
	#p = p + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(prox)
-- ERROR:
File "XXXX", line 9
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:52) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:59) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- EXECUTION TIME:
0.471693
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
3
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:47) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	danos = danos + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:00) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	danos = danos + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- EXECUTION TIME:
0.385023
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
2
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
4
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:04) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	danos = danos + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:31) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	danos = danos*danos + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:43) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	danos = danos*danos + 1
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- EXECUTION TIME:
0.339659
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
2
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
10
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:32) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = (danos[acum])*p
	p = p + danos[acum]
	acum = acum + 1
	ataque = danos[acum] + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(danos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:48) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[i] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:27) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[0] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + 1
	i = i + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:15) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[i] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + 1
	i = i + 1
	p = p + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:35) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[i] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + 1
	i = i + 1
	p = p + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:12) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[i] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + danos
	i = i + 1
	p = p + 1
#	final =  * danos
#	#final = final * danos
#	i = i + 1
#	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:50) 
-- CODE:
from numpy import*
danos = array(eval(input("danos de ataque: ")))
i = 0 # contador do laço
p = danos[i] * 1 # peso de ataque
acum = 0 #acumuladora de danos

while(i < size(danos)):
	danos = danos[i]*p
	acum = acum + danos
	i = i + 1
	p = p + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
